static/css/main.css
/* ... */
p a {
  color: #008AFF;
}


li a {
  color: #008AFF;
}

a {
  color: #4B4F56;
  text-decoration: none;
}

a:hover,
a:focus {
  color: #4B4F56;
  text-decoration: none;
}

blockquote {
  color: #808080;
  font-style: italic;
}

blockquote p:first-child {
  margin-top: 0;
}

hr.small {
  max-width: 100px;
  margin: 15px auto;
  border-width: 4px;
  border-color: inherit;
  border-radius: 3px;
}

figcaption p {
  font-size: 16px;
  text-align: center;
  color: rgba(33, 37, 41, 0.75);
}

.main-content {
  padding-top: 80px;
}

.main-explain-area {
  padding: 15px inherit;
}

div.panel-body a.list-group-item {
  font-weight: 800;
  border-radius: 0;
  border: none;
  font-size: 16px;
}

div.panel-group .panel {
  border-radius: 0;
}

div.panel-group .panel+.panel {
  margin-top: 0;
}

div.panel-body a.list-group-item.view-all {
  font-weight: 600;
}

::-moz-selection {
  color: white;
  text-shadow: none;
  background: #ED1B2F;
}

::selection {
  color: white;
  text-shadow: none;
  background: #ED1B2F;
}

img::selection {
  color: white;
  background: transparent;
}

img::-moz-selection {
  color: white;
  background: transparent;
}

img {
  display: block;
  margin: auto;
  max-width: 100%;
}

.img-title {
  width: 100%;
}

.img-50 {
  max-width: 90px;
}

.img-round {
  border-radius: 50%;
}

.disqus-comments {
  margin-top: 30px;
}

@media only screen and (min-width: 768px) {
  .disqus-comments {
    margin-top: 40px;
  }
}

.vh-50 {
  height: 50vh;
}

.intro-header-custom {
  margin-top: 20%;
}



/* --- Navbar --- */

.navbar-custom {
  background: #ffffff;
  border-bottom: 1px solid #EAEAEA;
}

.navbar-custom .nav li a {
  text-transform: uppercase;
  font-size: 12px;
  letter-spacing: 1px;
}

.navbar-custom .navbar-brand,
.navbar-custom .nav li a {
  font-weight: 600;
  color: #404040;
}

.navbar-custom .navbar-brand:hover,
.navbar-custom .navbar-brand:focus,
.navbar-custom .nav li a:hover,
.navbar-custom .nav li a:focus {
  color: #ED1B2F;
}

.navbar-custom .navbar-brand-logo {
  padding-top: 0;
  -webkit-transition: padding .5s ease-in-out;
  -moz-transition: padding .5s ease-in-out;
  transition: padding .5s ease-in-out;
}

.navbar-custom .navbar-brand-logo img {
  height: 50px;
  -webkit-transition: height .5s ease-in-out;
  -moz-transition: height .5s ease-in-out;
  transition: height .5s ease-in-out;
}

.navbar-custom.top-nav-short .navbar-brand-logo {
  padding-top: 5px;
}

.navbar-custom.top-nav-short .navbar-brand-logo img {
  height: 40px;
}

@media only screen and (min-width: 768px) {
  .navbar-custom {
    padding: 0px 0;
    -webkit-transition: background .5s ease-in-out, padding .5s ease-in-out;
    -moz-transition: background .5s ease-in-out, padding .5s ease-in-out;
    transition: background .5s ease-in-out, padding .5s ease-in-out;
  }

  .navbar-custom.top-nav-short {
    padding: 0;
  }
}

.navbar-custom .avatar-container {
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.5s ease-in-out;
  -moz-transition: opacity 0.5s ease-in-out;
  transition: opacity 0.5s ease-in-out;
  left: 50%;
  width: 50px;
  margin-top: -25px;
}

.navbar-custom .avatar-container .avatar-img-border {
  width: 100%;
  border-radius: 50%;
  margin-left: -50%;
  display: inline-block;
  box-shadow: 0 0 8px rgba(0, 0, 0, .8);
  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .8);
  -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
}

.navbar-custom .avatar-container .avatar-img {
  width: 100%;
  border-radius: 50%;
  display: block;
}

.navbar-custom.top-nav-short .avatar-container {
  opacity: 0;
}

.navbar-custom.top-nav-expanded .avatar-container {
  display: none;
}

@media only screen and (min-width: 768px) {
  .navbar-custom .avatar-container {
    width: 100px;
    margin-top: -50px;
  }

  .navbar-custom .avatar-container .avatar-img-border {
    width: 100%;
    box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
    -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
    -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
  }

  .navbar-custom .avatar-container .avatar-img {
    width: 100%;
  }
}

/* Multi-level navigation links */
.navbar-custom .nav .navlinks-container {
  position: relative;
}

.navbar-custom .nav .navlinks-parent:after {
  content: " \25BC";
}

.navbar-custom .nav .navlinks-children {
  width: 100%;
  display: none;
  word-break: break-word;
}

.navbar-custom .nav .navlinks-container .navlinks-children a {
  display: block;
  padding: 10px;
  padding-left: 30px;
  background: #f5f5f5;
  text-decoration: none !important;
  border-width: 0 1px 1px 1px;
  font-weight: normal;
}

@media only screen and (max-width: 767px) {
  .navbar-custom .nav .navlinks-container.show-children {
    background: #eee;
  }

  .navbar-custom .nav .navlinks-container.show-children .navlinks-children {
    display: block;
  }
}

@media only screen and (min-width: 768px) {
  .navbar-custom .nav .navlinks-container {
    text-align: center;
  }

  .navbar-custom .nav .navlinks-container:hover {
    background: #eee;
  }

  .navbar-custom .nav .navlinks-container:hover .navlinks-children {
    display: block;
  }

  .navbar-custom .nav .navlinks-children {
    position: absolute;
  }

  .navbar-custom .nav .navlinks-container .navlinks-children a {
    padding-left: 10px;
    border: 1px solid #eaeaea;
    border-width: 0 1px 1px;
  }
}



/* --- Search --- */

.search {
  display: inline-flex;
  align-items: baseline;
  border: 1px solid #344854;
  min-width: 2em;
  line-height: 1;
  border-radius: 1em;
  padding: 0.25em;
}

.search .search-icon {
  height: 0;
  color: #008AFF;
}

.search .search-icon:hover {
  color: #4B4F56;
}

.search .search-icon::before {
  cursor: pointer;
  width: 1.5em;
  height: 1.5em;
  text-align: center;
}

@keyframes spin {
  100% {
      transform: rotateY(360deg);
  }
}

.search[data-running] .search-icon {
  animation: spin 1.5s linear infinite;
}
/* ... */

